...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTitle_type"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_type"
                android:textAlignment="center"
                android:textSize="12pt" />

            <TextView
                android:id="@+id/textTitle_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/text_plus"
                android:textAlignment="viewEnd"
                android:textSize="12pt" />

            <TextView
                android:id="@+id/textTitle_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/text_minus"
                android:textAlignment="viewEnd"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type0"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/type0"
                android:text="@string/text_type0"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView0_plus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/textView0_minus"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:text="@string/total_init"
                android:textAlignment="viewEnd"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_type7"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/type7"
                android:text="@string/text_type7"
                android:textAlignment="center"
...
